tests/baselines/reference/targetTypeVoidFunc.errors.txt
tests/cases/compiler/targetTypeVoidFunc.ts(2,12): error TS2322: Type '() => void' is not assignable to type 'new () => number'.
  Signature 'new (): number' has no corresponding signature in '() => void'


==== tests/cases/compiler/targetTypeVoidFunc.ts (1 errors) ====
    function f1(): { new (): number; } {
        return function () { return; }
               ~~~~~~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => number'.
!!! error TS2322:   Signature 'new (): number' has no corresponding signature in '() => void'
    }; 
    
    var x = f1();
    var y = new x();
    var z = new (f1())();